fix bug overflow on the board

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,6 @@ body{
     height: 5%;
     width: 5%;
     display: inline-block;
-    overflow: scroll;
 }
 
 .sky {
